Comments, Formatting, Figures, reqs

--- a/Code/01_webScraping.ipynb
+++ b/Code/01_webScraping.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# This file web scrapes reviews and ratings from Yelp.com "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e3320cd4bc79d2e3"
+  },
+  {
    "cell_type": "code",
    "execution_count": 183,
    "id": "initial_id",
@@ -20,19 +30,37 @@
     "from tqdm import tqdm\n",
     "from bs4 import BeautifulSoup\n",
     "import re\n",
+    "\n",
     "from IPython.core.interactiveshell import InteractiveShell \n",
-    "InteractiveShell.ast_node_interactivity = \"all\""
+    "InteractiveShell.ast_node_interactivity = \"all\"\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 1.) Function Setup for Scraping"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "22371b7c3e14b20d"
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
     "def review_and_ratings(url):\n",
+    "    \"\"\"\n",
+    "    This function takes in a url and finds all the reviews and ratings html using XPath selectors. Yelp only shows 11 reviews per page, so this function can only return 11 (review,rating) tuples at a time. Return is a tuple of lists.\n",
+    "    \"\"\"\n",
+    "    # traverse url and obtain metadata from sold individual listing \n",
     "    with httpx.Client(http2=True, follow_redirects=True) as client:\n",
     "        resp = client.get(url)\n",
     "    sel = Selector(text=resp.text)\n",
     "    \n",
+    "    # Parse metadata using the two XPath selectors for reviews and ratings\n",
     "    selected_reviews = sel.xpath(r'//span[@class=\" raw__09f24__T4Ezm\"]').getall()\n",
     "    selected_ratings = sel.xpath(r'//div[@class=\"yelp-emotion-9tnml4\"]').getall() # Changed from css-14g69b3 -- 05/02/2024\n",
     "    \n",
@@ -56,9 +84,13 @@
    "outputs": [],
    "source": [
     "def get_all_biz(url, stop):\n",
+    "    \"\"\"\n",
+    "    This function gets all the reviews and ratings html from a restaurant given a specific restaurant url. It iterates through multiple pages until there are no more reviews as Yelp only shows 11 reviews per page. The stop parameter is the last page. Return is a tuple of lists.\n",
+    "    \"\"\"\n",
     "    reviews = []\n",
     "    ratings = []\n",
-    "    for i in range(0,stop*10,10):\n",
+    "    # I assume as another tactic by yelp to make scraping trickier, they have implemented page indexes in multiple of 10.\n",
+    "    for i in range(0,stop*10,10): \n",
     "        rev,rat = review_and_ratings(url+str(i))\n",
     "        reviews += rev\n",
     "        ratings += rat\n",
@@ -73,6 +105,16 @@
    },
    "id": "c476d4d5614e1518",
    "execution_count": 269
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 2.) Test to retrieve all reviews for two pages for GB Eats in Great Barrington"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "717d355c849a68c8"
   },
   {
    "cell_type": "code",
@@ -100,10 +142,21 @@
    "execution_count": 256
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 3.) Create list of popular restaurants urls in Great Barrington with stop page numbers "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "9dd44220041ac2e0"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
     "# Goal is 7000, aprx 2.5k\n",
+    "# Note starter urls have a specific \"?start=\" at the end of the business url, important for indexing later pages\n",
     "starter_urls = [(\"https://www.yelp.com/biz/gb-eats-great-barrington?start=\", 17),\n",
     "                (\"https://www.yelp.com/biz/baba-louies-sourdough-pizza-great-barrington-3?start=\", 35),\n",
     "                (\"https://www.yelp.com/biz/soco-creamery-great-barrington?start=\", 19),\n",
@@ -128,16 +181,29 @@
    "execution_count": 260
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 4.) Finally retrieve 2.5k reviews and ratings from 12 restaurants in Great Barrington"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6305ea4814dcdf9f"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
     "def get_all(urls=starter_urls):\n",
+    "    \"\"\"\n",
+    "    This function gets all reviews and ratings html using the starter_urls as an input. Returns a tuple of lists.\n",
+    "    \"\"\"\n",
     "    reviews = []\n",
     "    ratings = []\n",
     "    for item in tqdm(urls):\n",
     "        url,stop = item\n",
-    "        try:\n",
-    "            rev,rat = get_all_biz(url, stop)\n",
+    "        try: # Error logging in beginning stages\n",
+    "            rev,rat = get_all_biz(url, stop) # Get all reviews for a buisness\n",
     "        except:\n",
     "            print(\"Failed at: \"+url)\n",
     "            return reviews, ratings\n",
@@ -146,7 +212,7 @@
     "            exit()\n",
     "        reviews += rev\n",
     "        ratings += rat\n",
-    "    return reviews, ratings"
+    "    return reviews, ratings # All reviews for a list of urls"
    ],
    "metadata": {
     "collapsed": false,
@@ -183,17 +249,33 @@
    "execution_count": 272
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 5.) Function setup to parse html and extract reviews and ratings from html components"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "609a82649549aafd"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
     "def extract_text_from_html(html_string):\n",
-    "    soup = BeautifulSoup(html_string, 'html.parser')\n",
-    "    text = soup.text.strip()\n",
+    "    \"\"\"\n",
+    "    This function uses BeautifulSoup to parse the html string and obtain the review as a string \n",
+    "    \"\"\"\n",
+    "    soup = BeautifulSoup(html_string, 'html.parser') # Initialize BeautifulSoup\n",
+    "    text = soup.text.strip() # Find <p> tag and return it\n",
     "    return text\n",
     "\n",
     "def extract_rating_from_html(html_string):\n",
-    "    rating_regex = r'aria-label=\"(\\d+(?:\\.\\d+)?)\\sstar\\srating\"'\n",
-    "    text = re.findall(rating_regex, html_string)\n",
+    "    \"\"\"\n",
+    "    This function uses regex to pull the float value for number of stars for each review.\n",
+    "    \"\"\"\n",
+    "    rating_regex = r'aria-label=\"(\\d+(?:\\.\\d+)?)\\sstar\\srating\"' # Regex to get float number of stars\n",
+    "    text = re.findall(rating_regex, html_string) # Findall all cases (only 1)\n",
     "    return text"
    ],
    "metadata": {
@@ -207,6 +289,19 @@
    "execution_count": 308
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 6.) Iterate through scraped data to extract ratings and reviews and perform manual classification\n",
+    "##### Manual Classification is performed by labeling a review as:\n",
+    "* ##### positive if the number of stars > 3\n",
+    "* ##### negative if the number of stars <= 3"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "f6c02588bb7c7521"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
@@ -214,17 +309,15 @@
     "ratings = []\n",
     "sentiment = []\n",
     "for i in range(len(rev)):\n",
-    "    star = extract_rating_from_html(rat[i])\n",
-    "    if star is not None:\n",
-    "        reviews.append(extract_text_from_html(rev[i]))\n",
+    "    star = extract_rating_from_html(rat[i]) # Get number of stars (float)\n",
+    "    if star is not None: # Some reviews don't have stars (disguised as business owner response, same XPath)\n",
+    "        reviews.append(extract_text_from_html(rev[i])) \n",
     "        ratings.append(float(star[0]))\n",
-    "        if float(star[0]) > 3.0:\n",
+    "        if float(star[0]) > 3.0: # Manual Classification\n",
     "            sentiment.append(1)\n",
     "        else:\n",
     "            sentiment.append(0)\n",
-    "        \n",
-    "#reviews = [extract_text_from_html(x) for x in rev]\n",
-    "#ratings = [extract_rating_from_html(x) for x in rat]"
+    "save_df = pd.DataFrame(data={'review': reviews, 'rating': ratings, 'sentiment': sentiment}) # 1 for positive, 0 for negative"
    ],
    "metadata": {
     "collapsed": false,
@@ -240,23 +333,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "save_df = pd.DataFrame(data={'review': reviews, 'rating': ratings, 'sentiment': sentiment}) # 1 for positive, 0 for negative"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-04-02T05:54:22.087385200Z",
-     "start_time": "2024-04-02T05:54:22.081486Z"
-    }
-   },
-   "id": "a7f7baaf5c4f6b8",
-   "execution_count": 322
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "save_df.to_csv(\"./Data/2.5k_reviews.csv\", index=False)"
+    "save_df.to_csv(\"../Data/2.5k_reviews.csv\", index=False) # Save CSV"
    ],
    "metadata": {
     "collapsed": false,
