--- a/Code/02_featureEngineering.ipynb
+++ b/Code/02_featureEngineering.ipynb
@@ -1,6 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# This file computes a numerical representation for text reviews "
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d7799d80f77c026d"
+  },
+  {
    "cell_type": "code",
    "execution_count": 106,
    "id": "initial_id",
@@ -13,32 +23,16 @@
    },
    "outputs": [],
    "source": [
-    "# 1 for positive, 0 for negative, negative is 3 stars or less\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
     "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from imblearn.pipeline import Pipeline\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from imblearn.ensemble import BalancedBaggingClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import recall_score\n",
+    "import string\n",
     "import gensim\n",
-    "import nltk\n",
     "from nltk.tokenize import word_tokenize\n",
     "from sklearn.manifold import TSNE\n",
     "from sklearn.decomposition import PCA\n",
+    "import matplotlib.pyplot as plt\n",
     "import seaborn as sns\n",
-    "import string\n",
     "import joblib\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell \n",
@@ -46,39 +40,37 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "stopwords = pd.read_csv(\"./Data/stop_words.csv\")\n",
-    "stopwords=[i.replace('\"',\"\").strip() for i in stopwords.columns]\n",
-    "df = pd.read_csv(\"./Data/2.5k_reviews.csv\")"
+    "from IPython.core.interactiveshell import InteractiveShell \n",
+    "InteractiveShell.ast_node_interactivity = \"all\"\n",
+    "import warnings\n",
+    "warnings.filterwarnings('ignore')\n",
+    "\n",
+    "stopwords = list(pd.read_csv(\"../Data/stop_words.csv\")[\"words\"]) # Compiled list of stopwords\n",
+    "df = pd.read_csv(\"../Data/2.5k_reviews.csv\")"
    ]
   },
   {
-   "cell_type": "code",
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "## Word-Frequency, word vectoring (similarities among all words)"
+    "## 1.) Initial text preprocessing"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-02T16:01:26.097755500Z",
-     "start_time": "2024-05-02T16:01:26.094259800Z"
-    }
+    "collapsed": false
    },
-   "id": "31a769166e19fa60",
-   "execution_count": 107
+   "id": "72139d56f782216f"
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
     "def preprocess(text):\n",
-    "    text = text.lower()\n",
-    "    text = ''.join([word for word in text if word not in string.punctuation])\n",
-    "    tokens = word_tokenize(text)\n",
-    "    tokens = [word for word in tokens if word not in stopwords]\n",
-    "    return ' '.join(tokens)\n",
+    "    text = text.lower() # Convert to lowercase\n",
+    "    text = ''.join([word for word in text if word not in string.punctuation]) # Remove punctuation\n",
+    "    tokens = word_tokenize(text) # Splits string into a list of words (tokenizing)\n",
+    "    tokens = [word for word in tokens if word not in stopwords] # Remove stopwords (common words in English)\n",
+    "    return ' '.join(tokens) # Return full string\n",
     "\n",
-    "X = df.review.apply(preprocess)"
+    "X = df.review.apply(preprocess) # Apply for all reviews"
    ],
    "metadata": {
     "collapsed": false,
@@ -93,7 +85,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Frequency of top words"
+    "## 2.) Exploration: term frequency"
    ],
    "metadata": {
     "collapsed": false
@@ -106,13 +98,13 @@
    "source": [
     "def bagWords(text):\n",
     "    bow_vectorizer = CountVectorizer()\n",
-    "    X_scaled = bow_vectorizer.fit_transform([text]).toarray() # Fit transform for counter vectorizer\n",
+    "    X_scaled = bow_vectorizer.fit_transform([text]).toarray() # Fit transform for CountVectorizer\n",
     "    bow_df = pd.DataFrame(X_scaled,columns=bow_vectorizer.get_feature_names_out()) \n",
     "    word_count = bow_df.sum().sort_values(ascending=False).reset_index() # Get count and sort\n",
     "    word_count.columns = ['word','number'] # So we can keep track of words and their count\n",
     "    word_count = word_count.to_numpy()\n",
     "    new_list = [x for x in word_count if x[0] not in stopwords] # Exclude stop words\n",
-    "    new_list = [x for x in new_list if not any(i.isdigit() for i in x[0])]\n",
+    "    new_list = [x for x in new_list if not any(i.isdigit() for i in x[0])] # Exclude any strings with numbers\n",
     "    new_list = [list(x) for x in new_list]\n",
     "    return new_list\n",
     "\n",
@@ -144,7 +136,7 @@
    ],
    "source": [
     "topWords_df = pd.DataFrame(topWords)\n",
-    "topWords_df"
+    "topWords_df # Top 10 top words by review"
    ],
    "metadata": {
     "collapsed": false,
@@ -159,7 +151,9 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Word vectoring"
+    "## 3.) Vectorized Methods\n",
+    "\n",
+    "##### Creating 100 Dimension Word2Vec embeddings to serve as a numerical representation for each review. This will be fed as an input into models."
    ],
    "metadata": {
     "collapsed": false
@@ -170,7 +164,7 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "sentences = [sentence.split() for sentence in X]"
+    "sentences = [sentence.split() for sentence in X] # Split reviews into list of words"
    ],
    "metadata": {
     "collapsed": false,
@@ -195,6 +189,7 @@
     }
    ],
    "source": [
+    "# Creation of Word2Vec model with word frequency count = 5, 100 vector dimension size, and various hyperparameters tuned from performing manual cross validation.\n",
     "w2v_model = gensim.models.Word2Vec(workers=4,min_count=5, window=2, vector_size=100, sample=5e-5, alpha=0.04, min_alpha=0.0002, negative=10)\n",
     "w2v_model.build_vocab(sentences)\n",
     "w2v_model.train(sentences, total_examples=w2v_model.corpus_count, epochs=50)"
@@ -210,12 +205,23 @@
    "execution_count": 112
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 3.1) 2-D plot of query word, similiar words, and a list of words"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6ffe10cf6601b93b"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
     "def tsnescatterplot(model, word, list_names):\n",
-    "    \"\"\" Plot in seaborn the results from the t-SNE dimensionality reduction algorithm of the vectors of a query word,\n",
-    "    its list of most similar words, and a list of words.\n",
+    "    \"\"\" This function uses results from the t-SNE dimensionality reduction algorithm to plot the vectors of a query word,\n",
+    "    a list of most similar words, and a list of words. This serves to give a great visual for word representations and associations in the reviews.\n",
+    "    Thanks to Achintya Tripathi for their implementation on this adaption of the TSNE algorithm plot -- https://www.kaggle.com/code/achintyatripathi/gensim-word2vec-usage-with-t-sne-plot\n",
     "    \"\"\"\n",
     "    arrays = np.empty((0, 100), dtype='f')\n",
     "    word_labels = [word]\n",
@@ -250,44 +256,25 @@
     "    Y = TSNE(n_components=2, random_state=0, perplexity=15).fit_transform(reduc)\n",
     "    \n",
     "    # Sets everything up to plot\n",
-    "    df = pd.DataFrame({'x': [x for x in Y[:, 0]],\n",
-    "                       'y': [y for y in Y[:, 1]],\n",
-    "                       'words': word_labels,\n",
-    "                       'color': color_list})\n",
+    "    df = pd.DataFrame({'x': [x for x in Y[:, 0]],'y': [y for y in Y[:, 1]],'words': word_labels,'color': color_list})\n",
     "    \n",
     "    fig, _ = plt.subplots()\n",
     "    fig.set_size_inches(9, 6)\n",
     "    \n",
-    "    # Basic plot\n",
-    "    p1 = sns.regplot(data=df,\n",
-    "                     x=\"x\",\n",
-    "                     y=\"y\",\n",
-    "                     fit_reg=False,\n",
-    "                     marker=\"o\",\n",
-    "                     scatter_kws={'s': 40,\n",
-    "                                  'facecolors': df['color']\n",
-    "                                 }\n",
-    "                    )\n",
+    "    # Basic SNS plot\n",
+    "    p1 = sns.regplot(data=df,x=\"x\",y=\"y\",fit_reg=False,marker=\"o\",scatter_kws={'s': 40,'facecolors': df['color']})\n",
     "    \n",
     "    # Adds annotations one by one with a loop\n",
     "    for line in range(0, df.shape[0]):\n",
-    "         p1.text(df[\"x\"][line],\n",
-    "                 df['y'][line],\n",
-    "                 '  ' + df[\"words\"][line].title(),\n",
-    "                 horizontalalignment='left',\n",
-    "                 verticalalignment='bottom', size='medium',\n",
-    "                 color=df['color'][line],\n",
-    "                 weight='normal'\n",
-    "                ).set_size(15)\n",
+    "         p1.text(df[\"x\"][line],df['y'][line],'  ' + df[\"words\"][line].title(),horizontalalignment='left',\n",
+    "                 verticalalignment='bottom', size='medium',color=df['color'][line],weight='normal').set_size(15)\n",
     "\n",
-    "    \n",
-    "    #plt.xlim(Y[:, 0].min()-50, Y[:, 0].max()+50)\n",
-    "    #plt.ylim(Y[:, 1].min()-50, Y[:, 1].max()+50)\n",
+    "    # Set x and y limits\n",
     "    plt.xlim(Y[:, 0].min()-1, Y[:, 0].max()+1)\n",
     "    plt.ylim(Y[:, 1].min()-1, Y[:, 1].max()+1)\n",
     "            \n",
-    "    plt.title('t-SNE visualization for {}'.format(word.title()),fontsize = 30)\n",
-    "    plt.savefig('./Results/TSNE_vis.png')"
+    "    plt.title('TSNE visualization for {}'.format(word.title()),fontsize = 30)\n",
+    "    plt.savefig('../Results/02_TSNE_vis.png')"
    ],
    "metadata": {
     "collapsed": false,
@@ -325,6 +312,16 @@
    "execution_count": 161
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 3.2) Most similar words given a list of positive and negatives query words"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "c30712c5c79341a1"
+  },
+  {
    "cell_type": "code",
    "outputs": [
     {
@@ -350,18 +347,29 @@
    "execution_count": 115
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "### 3.3) Getting an average vector for each review (to obtain lexical and distributional semantics)\n",
+    "##### By mapping every word in the review to its Word2Vec vector, we can then take the mean for all the vectors to get an overall idea of how each review is situated among others. The model will then pick up on the positive and negative review clustering."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "3e2146ff765a5808"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
     "def vectorize(sentence):\n",
-    "    words = sentence.split()\n",
-    "    words_vecs = [w2v_model.wv[word] for word in words if word in w2v_model.wv]\n",
-    "    if len(words_vecs) == 0:\n",
+    "    words = sentence.split() # Get list of words for each review\n",
+    "    words_vecs = [w2v_model.wv[word] for word in words if word in w2v_model.wv] # Map a vector to each word\n",
+    "    if len(words_vecs) == 0: # No vectors, return array of 0s\n",
     "        return np.zeros(100)\n",
     "    words_vecs = np.array(words_vecs)\n",
-    "    return words_vecs.mean(axis=0)\n",
-    "w = np.array([vectorize(sentence) for sentence in X])\n",
-    "w = pd.DataFrame(w)"
+    "    return words_vecs.mean(axis=0) # Get average vector\n",
+    "w = np.array([vectorize(sentence) for sentence in X]) # Apply for all reviews\n",
+    "w = pd.DataFrame(w) # Convert to Dataframe"
    ],
    "metadata": {
     "collapsed": false,
@@ -372,6 +380,16 @@
    },
    "id": "4dec821e159a62b3",
    "execution_count": 116
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "### 3.4) Save necessary files"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "6e4dc092a2f1ed9f"
   },
   {
    "cell_type": "code",
@@ -387,7 +405,7 @@
     }
    ],
    "source": [
-    "w.to_csv(\"./Data/vectorizedWords.csv\", index=False)\n",
+    "w.to_csv(\"../Data/vectorizedWords.csv\", index=False) # Save vector mean representations to combine with dataset later\n",
     "w"
    ],
    "metadata": {
@@ -413,7 +431,7 @@
     }
    ],
    "source": [
-    "joblib.dump(w2v_model,'./Data/w2v_model.pkl')"
+    "joblib.dump(w2v_model,'../Data/w2v_model.pkl') # Save Word2Vec model for feature engineering when testing on new dataset"
    ],
    "metadata": {
     "collapsed": false,
