--- a/Code/03_compareModels.ipynb
+++ b/Code/03_compareModels.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Cross Validation"
+    "# This files compares different models using cross validation"
    ],
    "metadata": {
     "collapsed": false
@@ -25,25 +25,12 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
     "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from imblearn.pipeline import Pipeline\n",
     "from sklearn.model_selection import RandomizedSearchCV\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from imblearn.ensemble import BalancedBaggingClassifier\n",
     "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.svm import SVC\n",
     "from sklearn.metrics import classification_report\n",
-    "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import recall_score\n",
-    "import ast\n",
     "import dataframe_image as dfi\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell \n",
@@ -51,14 +38,14 @@
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "w = pd.read_csv(\"./Data/vectorizedWords.csv\").to_numpy()\n",
-    "df = pd.read_csv(\"./Data/2.5k_reviews.csv\")"
+    "w = pd.read_csv(\"../Data/vectorizedWords.csv\").to_numpy()\n",
+    "df = pd.read_csv(\"../Data/2.5k_reviews.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "### Put vectorization into df as it was saved seperately"
+    "## 1.) Put Vectorized features into df as it was saved separately"
    ],
    "metadata": {
     "collapsed": false
@@ -84,7 +71,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Data is unbalanced"
+    "## 2.) Undersample as data is unbalanced, ratio is approximately 1:1 for negative:positive"
    ],
    "metadata": {
     "collapsed": false
@@ -104,8 +91,8 @@
    ],
    "source": [
     "num0s = df.sentiment.value_counts()[0] # Get number of 0s (negative reviews)\n",
-    "subset_index = df[df.sentiment == 1].sample(int(df.shape[0] - num0s*1.8)).index\n",
-    "subset = df.drop(subset_index).reset_index(drop=True)\n",
+    "subset_index = df[df.sentiment == 1].sample(int(df.shape[0] - num0s*2)).index # Obtain positive reviews indexes to be dropped\n",
+    "subset = df.drop(subset_index).reset_index(drop=True) # Drop extra positive reviews for undersampling\n",
     "print(\"Number of negative reviews: \"+str(len(subset)-subset.sentiment.sum())+\"; Number of positive reviews: \"+str(subset.sentiment.sum()))"
    ],
    "metadata": {
@@ -121,7 +108,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Train"
+    "## 3.) Test train split the data"
    ],
    "metadata": {
     "collapsed": false
@@ -133,7 +120,8 @@
    "outputs": [],
    "source": [
     "y = subset.sentiment.values\n",
-    "X = subset.vectorization.values"
+    "X = subset.vectorization.values\n",
+    "X = np.stack(X, axis=0) # Expand the array for model"
    ],
    "metadata": {
     "collapsed": false,
@@ -162,27 +150,20 @@
    "execution_count": 146
   },
   {
-   "cell_type": "code",
-   "outputs": [],
+   "cell_type": "markdown",
    "source": [
-    "X_train = np.stack(X_train, axis=0) # Expand the array for model\n",
-    "X_test = np.stack(X_test, axis=0)"
+    "## 4.) Create parameter grids for each model for cross validation"
    ],
    "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-03T08:08:37.657469Z",
-     "start_time": "2024-05-03T08:08:37.628735800Z"
-    }
+    "collapsed": false
    },
-   "id": "e3352e5538e6cce9",
-   "execution_count": 147
+   "id": "40ac8f2ed86e5aac"
   },
   {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Create the random grid\n",
+    "# Create grids with some random parameters\n",
     "lr_random_grid = {'max_iter' : range(100, 500),\n",
     "                  'warm_start' : [True, False],\n",
     "                  'solver' : ['lbfgs', 'newton-cg', 'liblinear'],\n",
@@ -209,6 +190,17 @@
    "execution_count": 148
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 5.) Setup each classifier model and perform cross validation.\n",
+    "##### CV was performed with RandomizedSearchCV as it is less computationally expensive as compared to GridSearchCV and I wanted to test many parameter combinations. Note: Variable names are called pipeline but do not use one."
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e14910de95ee2826"
+  },
+  {
    "cell_type": "code",
    "outputs": [
     {
@@ -227,8 +219,8 @@
     "pipeline_lr = RandomizedSearchCV(estimator = pipeline_lr, param_distributions = lr_random_grid, \n",
     "                                 n_iter = 100, cv = 3, verbose=False, random_state=42, n_jobs = -1)\n",
     "pipeline_lr = pipeline_lr.fit(X_train, y_train)\n",
-    "y_pred_train_lr = pipeline_lr.predict(X_train)\n",
-    "y_pred_test_lr = pipeline_lr.predict(X_test)\n",
+    "y_pred_train_lr = pipeline_lr.predict(X_train) # Predict training set\n",
+    "y_pred_test_lr = pipeline_lr.predict(X_test) # Predict test set\n",
     "print(\"Done LR\")\n",
     "\n",
     "## Random Forest ---\n",
@@ -236,8 +228,8 @@
     "pipeline_rf = RandomizedSearchCV(estimator = pipeline_rf, param_distributions = rf_random_grid, \n",
     "                                 n_iter = 100, cv = 3, verbose=False, random_state=42, n_jobs = -1)\n",
     "pipeline_rf = pipeline_rf.fit(X_train, y_train)\n",
-    "y_pred_train_rf = pipeline_rf.predict(X_train)\n",
-    "y_pred_test_rf = pipeline_rf.predict(X_test)\n",
+    "y_pred_train_rf = pipeline_rf.predict(X_train) # Predict training set\n",
+    "y_pred_test_rf = pipeline_rf.predict(X_test) # Predict test set\n",
     "print(\"Done RF\")\n",
     "\n",
     "## KNN -- \n",
@@ -245,8 +237,8 @@
     "pipeline_knn = RandomizedSearchCV(estimator = pipeline_knn, param_distributions = knn_random_grid, \n",
     "                                 n_iter = 100, cv = 3, verbose=False, random_state=42, n_jobs = -1)\n",
     "pipeline_knn = pipeline_knn.fit(X_train, y_train)\n",
-    "y_pred_train_knn = pipeline_knn.predict(X_train)\n",
-    "y_pred_test_knn = pipeline_knn.predict(X_test)\n",
+    "y_pred_train_knn = pipeline_knn.predict(X_train) # Predict training set\n",
+    "y_pred_test_knn = pipeline_knn.predict(X_test) # Predict test set\n",
     "print(\"Done KNN\")\n",
     "# 5 mins"
    ],
@@ -273,6 +265,7 @@
     }
    ],
    "source": [
+    "# Random Forest best parameters\n",
     "pipeline_rf.best_params_"
    ],
    "metadata": {
@@ -286,10 +279,20 @@
    "execution_count": 150
   },
   {
+   "cell_type": "markdown",
+   "source": [
+    "## 6.) Display score metrics for each model and each class"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "92f1854352465934"
+  },
+  {
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Classification Report for Recall & Precision\n",
+    "# Obtain classification reports for Recall & Precision\n",
     "lr_report_train = classification_report(y_train,y_pred_train_lr, output_dict=True)\n",
     "lr_report_test = classification_report(y_test,y_pred_test_lr, output_dict=True)\n",
     "rf_report_train = classification_report(y_train,y_pred_train_rf, output_dict=True)\n",
@@ -355,7 +358,8 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "dfi.export(result.style,'./Results/crossValidationModels.png')"
+    "# Save table\n",
+    "dfi.export(result.style,'../Results/03_crossValidationModels.png')"
    ],
    "metadata": {
     "collapsed": false,
