--- a/Code/04_tuneRF.ipynb
+++ b/Code/04_tuneRF.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Tune Random Forest Model"
+    "# This file tunes the final Random Forest Model"
    ],
    "metadata": {
     "collapsed": false
@@ -25,42 +25,25 @@
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from imblearn.pipeline import Pipeline\n",
-    "from sklearn.model_selection import RandomizedSearchCV\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from imblearn.ensemble import BalancedBaggingClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import recall_score\n",
-    "from sklearn_evaluation import plot\n",
-    "import ast\n",
-    "from tqdm import tqdm\n",
     "import joblib\n",
+    "from sklearn.ensemble import RandomForestClassifier\n",
+    "from sklearn.metrics import classification_report\n",
+    "from sklearn_evaluation import plot\n",
+    "from matplotlib import pyplot as plt\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell \n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "w = pd.read_csv(\"./Data/vectorizedWords.csv\").to_numpy()\n",
-    "df = pd.read_csv(\"./Data/2.5k_reviews.csv\")"
+    "w = pd.read_csv(\"../Data/vectorizedWords.csv\").to_numpy()\n",
+    "df = pd.read_csv(\"../Data/2.5k_reviews.csv\")"
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "### Put vectorization into df as it was saved seperately"
+    "## 1.) Put Vectorized features into df as it was saved separately"
    ],
    "metadata": {
     "collapsed": false
@@ -86,7 +69,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Data is unbalanced"
+    "## 2.) Undersample as data is unbalanced, ratio is approximately 10:8 for negative:positive"
    ],
    "metadata": {
     "collapsed": false
@@ -106,8 +89,8 @@
    ],
    "source": [
     "num0s = df.sentiment.value_counts()[0] # Get number of 0s (negative reviews)\n",
-    "subset_index = df[df.sentiment == 1].sample(int(df.shape[0] - num0s*1.8)).index # 1.95\n",
-    "subset = df.drop(subset_index).reset_index(drop=True)\n",
+    "subset_index = df[df.sentiment == 1].sample(int(df.shape[0] - num0s*1.8)).index # Obtain positive reviews indexes to be dropped\n",
+    "subset = df.drop(subset_index).reset_index(drop=True) # Drop extra positive reviews for undersampling\n",
     "print(\"Number of negative reviews: \"+str(len(subset)-subset.sentiment.sum())+\"; Number of positive reviews: \"+str(subset.sentiment.sum()))"
    ],
    "metadata": {
@@ -123,49 +106,25 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Train"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "36e3846aba608608"
-  },
-  {
-   "cell_type": "code",
-   "outputs": [],
-   "source": [
-    "y = subset[\"sentiment\"].values\n",
-    "X = subset.vectorization.values"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-03T04:15:09.755264500Z",
-     "start_time": "2024-05-03T04:15:09.749281200Z"
-    }
-   },
-   "id": "6c484b786722c289",
-   "execution_count": 664
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "## Run Best PolyLinear Model"
-   ],
-   "metadata": {
-    "collapsed": false
-   },
-   "id": "8afa41e69c4ae27e"
-  },
-  {
-   "cell_type": "markdown",
-   "source": [
-    "Train model on everything"
+    "## 3.) Train and run best Random Forest Classifier Model"
    ],
    "metadata": {
     "collapsed": false
    },
    "id": "6939e1beeda6f80a"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "y = subset.sentiment.values\n",
+    "X = subset.vectorization.values\n",
+    "X_train = np.stack(X, axis=0) # Expand the array for model"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "d67a11dffcc561b"
   },
   {
    "cell_type": "code",
@@ -186,20 +145,12 @@
     }
    ],
    "source": [
-    "X_train = np.stack(X, axis=0) # Expand the array for model\n",
-    "\n",
+    "# Initialize RF model with 500 trees, a max depth of 10 (not too much as it will overfit) and max_feature of 2. Other parameters were tested to find the best ones.\n",
     "pipeline_rf = RandomForestClassifier(oob_score=True,n_estimators=500,max_depth=10,max_features=2,criterion='entropy',n_jobs=-1)\n",
     "pipeline_rf = pipeline_rf.fit(X_train, y)\n",
     "y_pred_train_rf = pipeline_rf.predict(X_train)\n",
     "\n",
-    "rf_report_train = classification_report(y,y_pred_train_rf, output_dict=True)\n",
-    "\n",
-    "rf_train_stuff = [rf_report_train[\"0\"][\"precision\"],rf_report_train[\"0\"][\"recall\"],rf_report_train[\"0\"][\"f1-score\"],\n",
-    "                rf_report_train[\"1\"][\"precision\"],rf_report_train[\"1\"][\"recall\"],rf_report_train[\"1\"][\"f1-score\"]]\n",
-    "\n",
-    "index = [\"RF_train\"]\n",
-    "columns =  [\"Precision - 0\",\"Recall - 0\",\"F1-Score - 0\", \"Precision - 1\",\"Recall - 1\",\"F1-Score - 1\"]\n",
-    "result = pd.DataFrame([rf_train_stuff], index, columns)\n",
+    "# Reported average results will be shown in 05_testPKL.ipynb\n",
     "print(classification_report(y,y_pred_train_rf))"
    ],
    "metadata": {
@@ -225,7 +176,7 @@
     }
    ],
    "source": [
-    "joblib.dump(pipeline_rf,'./Data/best_model.pkl') # Save model as pkl file"
+    "joblib.dump(pipeline_rf,'../Data/best_model.pkl') # Save model as pkl file"
    ],
    "metadata": {
     "collapsed": false,
@@ -240,7 +191,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "### Test on 100 N sample from entire dataset "
+    "## 4.) Test model on 100 N sample from entire dataset "
    ],
    "metadata": {
     "collapsed": false
@@ -273,8 +224,7 @@
     "X_mod = test_case.vectorization.values\n",
     "X_mod = np.stack(X_mod, axis=0) # Expand the array for model\n",
     "y_pred_mod = pipeline_rf.predict(X_mod)\n",
-    "print(classification_report(y_mod,y_pred_mod))\n",
-    "from sklearn.metrics import accuracy_score"
+    "print(classification_report(y_mod,y_pred_mod))"
    ],
    "metadata": {
     "collapsed": false,
@@ -289,7 +239,7 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## Visualize results for 100N test"
+    "## 5.) Visualize results for 100N test using ROC curve"
    ],
    "metadata": {
     "collapsed": false
@@ -309,9 +259,9 @@
     }
    ],
    "source": [
-    "y_score = pipeline_rf.predict_proba(X_mod)\n",
-    "roc = plot.ROC.from_raw_data(y_mod, y_score)\n",
-    "plt.savefig('./Results/ROC.png');"
+    "y_score = pipeline_rf.predict_proba(X_mod) # Predict estimates for all classes\n",
+    "roc = plot.ROC.from_raw_data(y_mod, y_score) # Using sklearn ROC plot function\n",
+    "plt.savefig('../Results/04_ROC.png'); # Save fig"
    ],
    "metadata": {
     "collapsed": false,
