--- a/Code/05_testPKL.ipynb
+++ b/Code/05_testPKL.ipynb
@@ -1,63 +1,52 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "source": [
+    "# This file runs and tests the Random Forest pkl model"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "e7e348d33752efc2"
+  },
+  {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 79,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-05-03T04:45:13.797175400Z",
-     "start_time": "2024-05-03T04:45:13.544783600Z"
+     "end_time": "2024-05-04T21:52:37.341457900Z",
+     "start_time": "2024-05-04T21:52:37.169178100Z"
     }
    },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
-    "from tqdm import tqdm\n",
-    "import matplotlib.pyplot as plt\n",
-    "\n",
-    "from sklearn.model_selection import train_test_split\n",
-    "from sklearn.preprocessing import StandardScaler\n",
-    "from sklearn.feature_extraction.text import CountVectorizer\n",
-    "from imblearn.pipeline import Pipeline\n",
-    "from sklearn.ensemble import RandomForestClassifier\n",
-    "from sklearn.naive_bayes import MultinomialNB\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from imblearn.ensemble import BalancedBaggingClassifier\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.metrics import classification_report\n",
-    "from sklearn.metrics import confusion_matrix\n",
-    "from sklearn.metrics import precision_score\n",
-    "from sklearn.metrics import recall_score\n",
-    "import gensim\n",
-    "import nltk\n",
-    "from nltk.tokenize import word_tokenize\n",
-    "from sklearn.manifold import TSNE\n",
-    "from sklearn.decomposition import PCA\n",
-    "import seaborn as sns\n",
-    "import string\n",
     "import joblib\n",
+    "import gensim\n",
+    "from nltk.tokenize import word_tokenize\n",
+    "import string\n",
+    "from sklearn.metrics import classification_report\n",
+    "import dataframe_image as dfi\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell \n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
     "import warnings\n",
     "warnings.filterwarnings('ignore')\n",
     "\n",
-    "\n",
-    "mod = joblib.load('./Data/best_model.pkl')\n",
-    "w2v_mod = joblib.load('./Data/w2v_model.pkl')\n",
-    "data = pd.read_csv('./Data/2.5k_reviews.csv')\n",
-    "stopwords = pd.read_csv(\"./Data/stop_words.csv\")\n",
-    "stopwords=[i.replace('\"',\"\").strip() for i in stopwords.columns]"
+    "mod = joblib.load('../Data/best_model.pkl')\n",
+    "w2v_mod = joblib.load('../Data/w2v_model.pkl')\n",
+    "data = pd.read_csv('../Data/2.5k_reviews.csv')\n",
+    "stopwords = list(pd.read_csv(\"../Data/stop_words.csv\")[\"words\"]) "
    ]
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## Get initial impression"
+    "## 1.) Get initial impression with one sample"
    ],
    "metadata": {
     "collapsed": false
@@ -80,31 +69,29 @@
    "source": [
     "test_case = data.sample(1)\n",
     "\n",
-    "# feature engineering\n",
+    "# Basically what we did in 02_featureEngineering.ipynb as we need to prepare the vector space features again\n",
     "def preprocess(text):\n",
-    "    text = text.lower()\n",
-    "    text = ''.join([word for word in text if word not in string.punctuation])\n",
-    "    tokens = word_tokenize(text)\n",
-    "    tokens = [word for word in tokens if word not in stopwords]\n",
-    "    return ' '.join(tokens)\n",
+    "    text = text.lower() # Convert to lowercase\n",
+    "    text = ''.join([word for word in text if word not in string.punctuation]) # Remove punctuation\n",
+    "    tokens = word_tokenize(text) # Splits string into a list of words (tokenizing)\n",
+    "    tokens = [word for word in tokens if word not in stopwords] # Remove stopwords (common words in English)\n",
+    "    return ' '.join(tokens) # Return full string\n",
     "\n",
-    "X = test_case.review.apply(preprocess)\n",
-    "sentences = [sentence.split() for sentence in X]\n",
+    "X = test_case.review.apply(preprocess) # Apply for all reviews\n",
     "\n",
-    "w2v_model = gensim.models.Word2Vec(workers=4,min_count=5, window=2, vector_size=100, sample=5e-5, alpha=0.04, min_alpha=0.0002, negative=10)\n",
     "def vectorize(sentence):\n",
-    "    words = sentence.split()\n",
-    "    words_vecs = [w2v_model.wv[word] for word in words if word in w2v_model.wv]\n",
-    "    if len(words_vecs) == 0:\n",
-    "        return np.zeros(100)\n",
+    "    words = sentence.split() # Split sentence into list of words\n",
+    "    words_vecs = [w2v_mod.wv[word] for word in words if word in w2v_mod.wv] # Return word vectors \n",
+    "    if len(words_vecs) == 0: \n",
+    "        return np.zeros(100) # Vector space set to 100 Dimensions\n",
     "    words_vecs = np.array(words_vecs)\n",
-    "    return words_vecs.mean(axis=0)\n",
-    "w = np.array([vectorize(sentence) for sentence in X])\n",
+    "    return words_vecs.mean(axis=0) # Return mean for each Dimension\n",
+    "w = np.array([vectorize(sentence) for sentence in X]) # Vectorize each review\n",
     "\n",
     "new_X = w\n",
     "new_y = test_case.sentiment.values\n",
     "\n",
-    "y_new_pred_rf = mod.predict(new_X)\n",
+    "y_new_pred_rf = mod.predict(new_X) # Ready to predict on sample test case\n",
     "if y_new_pred_rf == new_y:\n",
     "    print(\"Classified \"+(\"positive\" if y_new_pred_rf is 1 else \"negative\")+\" case correctly!\\n\")\n",
     "    print(test_case.review.values[0])\n",
@@ -115,12 +102,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-03T04:19:18.496952200Z",
-     "start_time": "2024-05-03T04:19:18.441130700Z"
+     "end_time": "2024-05-04T21:43:46.117594900Z",
+     "start_time": "2024-05-04T21:43:46.063807Z"
     }
    },
    "id": "f19ad44c32316a03",
-   "execution_count": 7
+   "execution_count": 48
   },
   {
    "cell_type": "code",
@@ -129,29 +116,29 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0]\n",
-      "[1]\n"
+      "Predicted: [0]\n",
+      "Actual: [1]\n"
      ]
     }
    ],
    "source": [
-    "print(y_new_pred_rf) # negative\n",
-    "print(new_y) # positive ??"
+    "print(\"Predicted: \"+str(y_new_pred_rf)) # negative\n",
+    "print(\"Actual: \"+str(new_y)) # positive ??"
    ],
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-03T04:23:57.721223Z",
-     "start_time": "2024-05-03T04:23:57.718715800Z"
+     "end_time": "2024-05-04T21:43:46.117594900Z",
+     "start_time": "2024-05-04T21:43:46.112456500Z"
     }
    },
    "id": "8846289d117debe9",
-   "execution_count": 14
+   "execution_count": 49
   },
   {
    "cell_type": "markdown",
    "source": [
-    "## Get average values"
+    "## 2.) Get average values for final RF model"
    ],
    "metadata": {
     "collapsed": false
@@ -162,35 +149,35 @@
    "cell_type": "code",
    "outputs": [],
    "source": [
-    "# Testing model on random sample from dataframe\n",
+    "# Testing model on random sample from dataset\n",
     "\n",
     "def predictNonLinear(model, N=100):\n",
     "    test_case = data.sample(N)\n",
     "    \n",
-    "    # feature engineering\n",
+    "    # Basically what we did in 02_featureEngineering.ipynb as we need to prepare the vector space features again\n",
     "    def preprocess(text):\n",
-    "        text = text.lower()\n",
-    "        text = ''.join([word for word in text if word not in string.punctuation])\n",
-    "        tokens = word_tokenize(text)\n",
-    "        tokens = [word for word in tokens if word not in stopwords]\n",
-    "        return ' '.join(tokens)\n",
+    "        text = text.lower() # Convert to lowercase\n",
+    "        text = ''.join([word for word in text if word not in string.punctuation]) # Remove punctuation\n",
+    "        tokens = word_tokenize(text) # Splits string into a list of words (tokenizing)\n",
+    "        tokens = [word for word in tokens if word not in stopwords] # Remove stopwords (common words in English)\n",
+    "        return ' '.join(tokens) # Return full string\n",
     "    \n",
-    "    X = test_case.review.apply(preprocess)\n",
+    "    X = test_case.review.apply(preprocess) # Apply for all reviews\n",
     "    \n",
     "    def vectorize(sentence):\n",
-    "        words = sentence.split()\n",
-    "        words_vecs = [w2v_mod.wv[word] for word in words if word in w2v_mod.wv]\n",
-    "        if len(words_vecs) == 0:\n",
-    "            return np.zeros(100)\n",
+    "        words = sentence.split() # Split sentence into list of words\n",
+    "        words_vecs = [w2v_mod.wv[word] for word in words if word in w2v_mod.wv] # Return word vectors \n",
+    "        if len(words_vecs) == 0: \n",
+    "            return np.zeros(100) # Vector space set to 100 Dimensions\n",
     "        words_vecs = np.array(words_vecs)\n",
-    "        return words_vecs.mean(axis=0)\n",
-    "    w = np.array([vectorize(sentence) for sentence in X])\n",
+    "        return words_vecs.mean(axis=0) # Return mean for each Dimension\n",
+    "    w = np.array([vectorize(sentence) for sentence in X]) # Vectorize each review\n",
     "    \n",
     "    new_X = w\n",
     "    new_y = test_case.sentiment.values\n",
     "    \n",
-    "    y_new_pred_rf = mod.predict(new_X)\n",
-    "    y_pred_report = classification_report(new_y,y_new_pred_rf, output_dict=True)\n",
+    "    y_new_pred_rf = mod.predict(new_X) # Predict samples\n",
+    "    y_pred_report = classification_report(new_y,y_new_pred_rf, output_dict=True) # Output report as dictionary\n",
     "    \n",
     "    return (y_pred_report[\"0\"][\"precision\"],y_pred_report[\"0\"][\"recall\"],\n",
     "            y_pred_report[\"1\"][\"precision\"],y_pred_report[\"1\"][\"recall\"])"
@@ -198,37 +185,12 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-03T04:46:24.473851400Z",
-     "start_time": "2024-05-03T04:46:24.467881800Z"
+     "end_time": "2024-05-04T21:49:14.552674700Z",
+     "start_time": "2024-05-04T21:49:14.544558200Z"
     }
    },
    "id": "193387334d26a94c",
-   "execution_count": 55
-  },
-  {
-   "cell_type": "code",
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "(0.75, 1.0, 1.0, 0.8571428571428571)"
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "predictNonLinear(mod, 10)"
-   ],
-   "metadata": {
-    "collapsed": false,
-    "ExecuteTime": {
-     "end_time": "2024-05-03T04:46:24.865628500Z",
-     "start_time": "2024-05-03T04:46:24.814853100Z"
-    }
-   },
-   "id": "6fd55289810d2855",
-   "execution_count": 56
+   "execution_count": 75
   },
   {
    "cell_type": "code",
@@ -237,8 +199,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Average Precision (0): 0.6058750804742254; Average Recall (0): 0.9766755814658181\n",
-      "Average Precision (1): 0.9873315302036992; Average Recall (1): 0.7378452622874492\n"
+      "Average Precision (0): 0.600794665982024; Average Recall (0): 0.9828618861266122\n",
+      "Average Precision (1): 0.9905027534696815; Average Recall (1): 0.7423732223061903\n"
      ]
     }
    ],
@@ -266,12 +228,32 @@
    "metadata": {
     "collapsed": false,
     "ExecuteTime": {
-     "end_time": "2024-05-03T04:50:11.635649400Z",
-     "start_time": "2024-05-03T04:50:08.616821800Z"
+     "end_time": "2024-05-04T21:49:17.847246600Z",
+     "start_time": "2024-05-04T21:49:14.784625400Z"
     }
    },
    "id": "b1f3bf6e83b22a6f",
-   "execution_count": 83
+   "execution_count": 76
+  },
+  {
+   "cell_type": "code",
+   "outputs": [],
+   "source": [
+    "# Save table of results\n",
+    "index = [\"RF - Final Model\"]\n",
+    "columns =  [\"Precision - 0\",\"Recall - 0\",\"Precision - 1\",\"Recall - 1\"]\n",
+    "result = pd.DataFrame([[avg_p0,avg_r0,avg_p1,avg_r1]], index, columns)\n",
+    "dfi.export(result.T.style,'../Results/05_finalAverageScores.png')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-04T21:53:08.471658100Z",
+     "start_time": "2024-05-04T21:53:06.805369200Z"
+    }
+   },
+   "id": "14c39f890f13d7c9",
+   "execution_count": 80
   }
  ],
  "metadata": {
