--- a/Code/01_webScraping.ipynb
+++ b/Code/01_webScraping.ipynb
@@ -12,13 +12,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 183,
+   "execution_count": 1,
    "id": "initial_id",
    "metadata": {
     "collapsed": true,
     "ExecuteTime": {
-     "end_time": "2024-04-02T04:21:00.664948600Z",
-     "start_time": "2024-04-02T04:21:00.652945600Z"
+     "end_time": "2024-05-05T00:37:18.894980Z",
+     "start_time": "2024-05-05T00:37:17.092668500Z"
     }
    },
    "outputs": [],
@@ -30,6 +30,7 @@
     "from tqdm import tqdm\n",
     "from bs4 import BeautifulSoup\n",
     "import re\n",
+    "import dataframe_image as dfi\n",
     "\n",
     "from IPython.core.interactiveshell import InteractiveShell \n",
     "InteractiveShell.ast_node_interactivity = \"all\"\n",
@@ -328,6 +329,44 @@
    },
    "id": "8a343ed734bc633f",
    "execution_count": 321
+  },
+  {
+   "cell_type": "markdown",
+   "source": [
+    "## 7.) Save dataset and its unbalanced labels"
+   ],
+   "metadata": {
+    "collapsed": false
+   },
+   "id": "940ba789dedcad20"
+  },
+  {
+   "cell_type": "code",
+   "outputs": [
+    {
+     "data": {
+      "text/plain": "positive    1876\nnegative     701\nName: count, dtype: int64"
+     },
+     "execution_count": 26,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "grouped = save_df.sentiment.value_counts()\n",
+    "grouped.index = [\"positive\", \"negative\"]\n",
+    "grouped\n",
+    "dfi.export(pd.DataFrame(grouped).style,'../Results/01_table_review_imbalance.png')"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "ExecuteTime": {
+     "end_time": "2024-05-05T00:41:36.774453800Z",
+     "start_time": "2024-05-05T00:41:35.170655900Z"
+    }
+   },
+   "id": "613b266067952c37",
+   "execution_count": 26
   },
   {
    "cell_type": "code",
