--- a/Code/03_compareModels.ipynb
+++ b/Code/03_compareModels.ipynb
@@ -193,7 +193,7 @@
    "cell_type": "markdown",
    "source": [
     "## 5.) Setup each classifier model and perform cross validation.\n",
-    "##### CV was performed with RandomizedSearchCV as it is less computationally expensive as compared to GridSearchCV and I wanted to test many parameter combinations. Note: Variable names are called pipeline but do not use one."
+    "##### CV was performed with RandomizedSearchCV as it is less computationally expensive as compared to GridSearchCV and I wanted to test many parameter combinations. Binomial, multinomial or SVC models don’t accept negative inputs, so, to preserve my distributions, the following models were compared. Note: Variable names are called pipeline but do not use one."
    ],
    "metadata": {
     "collapsed": false
