--- a/Code/04_tuneRF.ipynb
+++ b/Code/04_tuneRF.ipynb
@@ -106,7 +106,8 @@
   {
    "cell_type": "markdown",
    "source": [
-    "## 3.) Train and run best Random Forest Classifier Model"
+    "## 3.) Train and run the best Random Forest Classifier Model\n",
+    "##### I did not test train split as there will always be 30% of the data which is not seen by the decision tree."
    ],
    "metadata": {
     "collapsed": false
